--- a/css/responsive(414).css
+++ b/css/responsive(414).css
@@ -1,105 +1,88 @@
-
 /* #### iPhone 5 Portrait or Landscape #### */
 
-@media only screen and (max-width:414px)
-{
-
-.logo
-{
+@media only screen and (max-width: 414px) {
+  .logo {
     display: flex;
     justify-content: center;
     margin: -130px 0;
-}
+  }
 
-.sidebar-header
-    {
-        background: #FAFAFA;
-        color: white;
-        margin-top: 100px;
-        position: relative;
-        display: block;
-        border: none;
-    }
+  .sidebar-header {
+    background: #fafafa;
+    color: white;
+    margin-top: 100px;
+    position: relative;
+    display: block;
+    border: none;
+  }
 
-    .sidebar-header-menu ul
-    {
-        margin-right: 30%;
-        margin-top: 10px;
-    }
+  .sidebar-header-menu ul {
+    margin-right: 30%;
+    margin-top: 10px;
+  }
 
-    .sidebar-header-menu ul li
-    {
-        padding: 18px 0;
-    }
+  .sidebar-header-menu ul li {
+    padding: 18px 0;
+  }
 
-    .sidebar-header-menu ul li a
-    {
-        font-size: 18px;
-    }
+  .sidebar-header-menu ul li a {
+    font-size: 18px;
+  }
 
-.sidebar-social-menu ul
-{
+  .sidebar-social-menu ul {
     margin: 30px 0 30px 0;
-}
+  }
 
-.copyright
-{
+  .copyright {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 30px auto 30px auto;
-}
+  }
 
-.cipyright-link
-{
+  .cipyright-link {
     font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
-}
+  }
 
-.logo2
-{
+  .logo2 {
     display: flex;
     float: right;
     margin: 15px -108px 20px 0;
-}
-
-.container-img
-  {
-      height: 65vh;
-      width: 100%;
-      margin-top: -20px;
   }
 
-/*####################------About-----######################*/
-p.p2
-    {
-        font-size: 17px;
-        line-height: 25px;
-    }
-
-    .personal-info
-  {
-      color: #6F7275;
-      font-family: Segoe UI;
-      margin: 10% 0 0 3%;
+  .container-img {
+    height: 65vh;
+    width: 100%;
+    margin-top: -20px;
   }
 
-  .i-do1
-  {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      box-shadow: 1px 1px 20px 3px rgba(0, 0, 0, 0.6);
-      padding: 4%;
-      margin: 10% 0 5% 0;
-      border-radius: 10px;
-      width: 90%;
-      transform: perspective(0) rotateY(0);
-      transition: .7s all ease;
+  /*####################------About-----######################*/
+  p.p2 {
+    font-size: 17px;
+    line-height: 25px;
   }
 
-  .i-do1 .fa
-  {
+  .personal-info {
+    color: #6f7275;
+    font-family: Segoe UI;
+    margin: 10% 0 0 3%;
+  }
+
+  .i-do1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 1px 1px 20px 3px rgba(0, 0, 0, 0.6);
+    padding: 4%;
+    margin: 10% 0 5% 0;
+    border-radius: 10px;
+    width: 90%;
+    transform: perspective(0) rotateY(0);
+    transition: 0.7s all ease;
+  }
+
+  .i-do1 .fa {
     color: #006400;
     font-size: 30px;
     border-radius: 50%;
@@ -107,39 +90,35 @@ p.p2
     padding: 30px;
   }
 
-  .i-do1 h3 
-  {
+  .i-do1 h3 {
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 25px;
     color: rgb(44, 44, 230);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     margin: 0 0 0 7%;
   }
 
-  .i-do1:hover
-  {
-    transform: perspective(0) rotateY(0);   
+  .i-do1:hover {
+    transform: perspective(0) rotateY(0);
   }
 
-  .i-do2
-  {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      float: right;
-      box-shadow: 1px 1px 20px 3px rgba(0, 0, 0, 0.6);
-      padding: 4%;
-      margin: 5% 0 0 0;
-      border-radius: 10px;
-      width: 90%;
-      transform: perspective(0) rotateY(0);
-      transition: .7s all ease;
+  .i-do2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    float: right;
+    box-shadow: 1px 1px 20px 3px rgba(0, 0, 0, 0.6);
+    padding: 4%;
+    margin: 5% 0 0 0;
+    border-radius: 10px;
+    width: 90%;
+    transform: perspective(0) rotateY(0);
+    transition: 0.7s all ease;
   }
 
-  .i-do2 .fa
-  {
+  .i-do2 .fa {
     color: #006400;
     font-size: 30px;
     border-radius: 50%;
@@ -147,39 +126,35 @@ p.p2
     padding: 30px;
   }
 
-  .i-do2 h3 
-  {
+  .i-do2 h3 {
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 25px;
     color: rgb(44, 44, 230);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     margin: 0 7% 0 0;
   }
 
-  .i-do2:hover
-  {
-    transform: perspective(0) rotateY(0);   
+  .i-do2:hover {
+    transform: perspective(0) rotateY(0);
   }
 
-  .i-do3
-  {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      float: right;
-      box-shadow: 1px 1px 20px 3px rgba(0, 0, 0, 0.6);
-      padding: 4% 6% 4% 4% ;
-      margin: 5% 0 10% 0;
-      border-radius: 10px;
-      width: 90%;
-      transform: perspective(0) rotateY(0);
-      transition: .7s all ease;
+  .i-do3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    float: right;
+    box-shadow: 1px 1px 20px 3px rgba(0, 0, 0, 0.6);
+    padding: 4% 6% 4% 4%;
+    margin: 5% 0 10% 0;
+    border-radius: 10px;
+    width: 90%;
+    transform: perspective(0) rotateY(0);
+    transition: 0.7s all ease;
   }
 
-  .i-do3 .fa
-  {
+  .i-do3 .fa {
     color: #006400;
     font-size: 30px;
     border-radius: 50%;
@@ -187,20 +162,18 @@ p.p2
     padding: 30px;
   }
 
-  .i-do3 h3 
-  {
+  .i-do3 h3 {
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 25px;
     color: rgb(44, 44, 230);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     margin: 0 7% 0 0;
   }
 
-  .i-do3:hover
-  {
-    transform: perspective(0) rotateY(0); 
+  .i-do3:hover {
+    transform: perspective(0) rotateY(0);
   }
 
   .grid-container {
@@ -212,98 +185,84 @@ p.p2
     margin: 10% 0 15% 0;
   }
 
-  .fun-fact
-  {
-      margin: 10% 0 40% 0;
+  .fun-fact {
+    margin: 10% 0 30% 0;
   }
-
-
 
   /*######------Resume------######*/
 
-  .skill-container
-  {
-      display: none;
+  .skill-container {
+    display: none;
   }
 
-  .skill-container1 .skills1
-{
+  .skill-container1 .skills1 {
     display: block;
-}
+  }
 
-.skill-container1 .skills1
-{
+  .skill-container1 .skills1 {
     position: relative;
     display: flex;
     margin: 20px 0;
     padding: 18px 10px 10px;
-    background: linear-gradient(0deg,#1b1b1b,#222,#1b1b1b);
+    background: linear-gradient(0deg, #1b1b1b, #222, #1b1b1b);
     border-radius: 8px;
     overflow: hidden;
-    border: 2px solid #00FF43;
+    border: 2px solid #00ff43;
     transition: 0.5s;
-}
+  }
 
-.skill-container1:hover .skills1
-{
+  .skill-container1:hover .skills1 {
     opacity: 0.6;
-}
+  }
 
-.skill-container1 .skills1:hover
-{
+  .skill-container1 .skills1:hover {
     opacity: 1;
     transform: scale(1.07);
-}
+  }
 
-.skill-container1 .skills1::before
-{
-    content: '';
+  .skill-container1 .skills1::before {
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 50%;
-    background: rgba(255, 255, 255, .03);
-}
+    background: rgba(255, 255, 255, 0.03);
+  }
 
-.skill-container1 .skills1 .name
-{
+  .skill-container1 .skills1 .name {
     position: relative;
     font-size: 14px;
     letter-spacing: 2px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     width: 110px;
     text-align: right;
-    color: #F2E1DD;
+    color: #f2e1dd;
     margin-top: -4px;
     text-transform: uppercase;
     transition: 0.5s;
-}
+  }
 
-.skill-container1 .skills1:hover .name
-{
+  .skill-container1 .skills1:hover .name {
     color: #fff;
-}
+  }
 
-.skill-container1 .skills1 .value
-{
+  .skill-container1 .skills1 .value {
     position: relative;
     font-size: 14px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     width: 40px;
     text-align: left;
-    color: #F2E1DD;
+    color: #f2e1dd;
     margin-top: -6px;
     text-transform: uppercase;
-}
+  }
 
-.skill-container1 .skills1:hover .value
-{
+  .skill-container1 .skills1:hover .value {
     color: #fff;
-}
+  }
 
-.skill-container1 .skills1 .percent
-{
+  .skill-container1 .skills1 .percent {
     position: relative;
     width: calc(100% - 150px);
     height: 6px;
@@ -312,10 +271,9 @@ p.p2
     background: #151515;
     box-shadow: inset0 0 10px #000;
     overflow: hidden;
-}
+  }
 
-.skill-container1 .skills1 .percent .progress
-{
+  .skill-container1 .skills1 .percent .progress {
     position: absolute;
     top: 0;
     left: 0;
@@ -325,48 +283,40 @@ p.p2
     background: #fff;
     box-shadow: inset 0 0 2px #000;
     animation: animate1 4s ease-in-out forwards;
-}
+  }
 
-@keyframes animate1
-{
-    from
-    {
-        width: 0;
+  @keyframes animate1 {
+    from {
+      width: 0;
     }
-}
+  }
 
-.skill-container1 .skills1:nth-child(1) .percent .progress
-{
+  .skill-container1 .skills1:nth-child(1) .percent .progress {
     background: linear-gradient(45deg, #1fe6ff, #673ab7);
-}
+  }
 
-.skill-container1 .skills1:nth-child(2) .percent .progress
-{
+  .skill-container1 .skills1:nth-child(2) .percent .progress {
     background: linear-gradient(45deg, #3bc0ff, #33ff00);
-}
+  }
 
-.skill-container1 .skills1:nth-child(3) .percent .progress
-{
+  .skill-container1 .skills1:nth-child(3) .percent .progress {
     background: linear-gradient(45deg, #ffee54, #ff00ca);
-}
+  }
 
-.hobby-container
-{
-    margin: 0 0 40% 0;
-}
+  .hobby-container {
+    margin: 0 0 30% 0;
+  }
 
-.hobby-container ul
-{
+  .hobby-container ul {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 10px;
     overflow: hidden;
-}
+  }
 
-.hobby-container ul li
-{
+  .hobby-container ul li {
     width: 80px;
     height: 80px;
     margin: 7% 0 7% 0;
@@ -374,51 +324,45 @@ p.p2
     border-radius: 50%;
     position: relative;
     color: #006400;
-    background: #FFC0CB;
+    background: #ffc0cb;
     transition: 0.5s;
-}
+  }
 
-.hobby-container ul li:hover
-{
+  .hobby-container ul li:hover {
     transform: scale(1.1);
-}
+  }
 
-.hobby-container ul li i 
-{
+  .hobby-container ul li i {
     font-size: 30px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     transition: 0.5s;
-}
+  }
 
-.hobby-container ul li::after
-{
-    content: '';
+  .hobby-container ul li::after {
+    content: "";
     position: absolute;
     top: 80px;
-    right: 40px; 
+    right: 40px;
     width: 2px;
     height: 52px;
     background: #006400;
+  }
 
-}
-
-.hobby-container ul li:last-child::after
-{
+  .hobby-container ul li:last-child::after {
     display: none;
-}
+  }
 
-/*---------_Portfolio_-------*/
-.gallery-outer
-{
+  /*---------_Portfolio_-------*/
+  .gallery-outer {
     margin: 0 0 40% 0;
-}
+  }
 
-/*---------_Contact_-------*/
+  /*---------_Contact_-------*/
 
-.grid-container1 {
+  .grid-container1 {
     display: grid;
     grid-template-columns: auto;
     grid-row-gap: 20px;
@@ -430,7 +374,7 @@ p.p2
     justify-content: center;
     align-items: center;
   }
-  
+
   .grid-container1 > div {
     background-color: rgba(255, 255, 255, 0.8);
     text-align: center;
@@ -445,38 +389,31 @@ p.p2
     transition: 0.3s all ease;
   }
 
-  .grid-item1
-  {
+  .grid-item1 {
     background: url(contact-back.jpg);
     background-size: cover;
     background-repeat: no-repeat;
   }
 
-  .contact-icon
-  {
-    color: #DBA320;
+  .contact-icon {
+    color: #dba320;
     font-size: 25px;
   }
 
-  .grid-text
-  {
+  .grid-text {
     color: #fff;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     letter-spacing: 1px;
     margin: 15px auto;
     font-size: 16px;
   }
 
-  #map
-  {
-      height: 200px;
-      width: 100%;
+  #map {
+    height: 200px;
+    width: 100%;
   }
 
-  .contact-form 
-  {
-    margin: 20px 0 40% 0;
+  .contact-form {
+    margin: 20px 0 30% 0;
   }
-
-
 }
