--- a/css/contact.css
+++ b/css/contact.css
@@ -1,104 +1,94 @@
+/* contact only */
 
+.contact-main-name-bg {
+  height: 40px;
+  width: 100%;
+  background: #ffffff;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
 
-/* contact only */   
+.contact-main-name {
+  background-color: rgb(44, 44, 230);
+  width: 115px;
+  padding: 11px 10px 11px 45px;
+  color: #ffffff;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  letter-spacing: 1px;
+  margin-left: -3px;
+  margin-top: 40px;
+  animation: main-name 2s ease-in-out;
+}
 
-.contact-main-name-bg
-  {
-      height: 40px;
-      width: 100%;
-      background: #FFFFFF;
-      position: sticky;
-      top: 0;
-      z-index: 100;
+@keyframes main-name {
+  0% {
+    transform: translate(-1000px, 0);
   }
+  100% {
+    transform: translate(0, 0);
+  }
+}
 
-.contact-main-name
-  {
-      background-color: rgb(44, 44, 230);
-      width: 115px;
-      padding: 11px 10px 11px 45px;
-      color: #ffffff;
-      font-family: Arial, Helvetica, sans-serif;
-      font-size: 14px;
-      letter-spacing: 1px;
-      margin-left: -3px;
-      margin-top: 40px;
-      animation: main-name 2s ease-in-out;
-  }
-  
-  @keyframes main-name
-  {
-      0%{
-          transform: translate(-1000px, 0);
-      }
-      100%{
-          transform: translate(0, 0);
-      }
-  }
+.contact-inner-container {
+  padding: 40px 20px 0 20px;
+  display: flex;
+  flex-direction: column;
+}
 
-  .contact-inner-container
-  {
-      padding: 40px 20px 0 20px;
-      display: flex;
-      flex-direction: column;
-  }
+.grid-container1 {
+  display: grid;
+  grid-template-columns: auto;
+  grid-row-gap: 20px;
+  grid-column-gap: 20px;
+  width: 100%;
+  margin: 1% 0 10% 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
-  .grid-container1 {
-    display: grid;
-    grid-template-columns: auto;
-    grid-row-gap: 20px;
-    grid-column-gap: 20px;
-    width: 100%;
-    margin: 1% 0 10% 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .grid-container1 > div {
-    background-color: rgba(255, 255, 255, 0.8);
-    text-align: center;
-    font-size: 30px;
-    height: 120px;
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
-    transition: 0.3s all ease;
-  }
+.grid-container1 > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  font-size: 30px;
+  height: 120px;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  transition: 0.3s all ease;
+}
 
-  .grid-item1
-  {
-    background: url(contact-back.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
+.grid-item1 {
+  background: url(contact-back.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 
-  .contact-icon
-  {
-    color: #DBA320;
-    font-size: 25px;
-  }
+.contact-icon {
+  color: #dba320;
+  font-size: 25px;
+}
 
-  .grid-text
-  {
-    color: #fff;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    letter-spacing: 1px;
-    margin: 15px auto;
-    font-size: 16px;
-  }
+.grid-text {
+  color: #fff;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  letter-spacing: 1px;
+  margin: 15px auto;
+  font-size: 16px;
+}
 
-  #map
-  {
-      height: 120px;
-      width: 80%;
-      /* border: solid #fff 2px; */
-      border-radius: 10px;
-  }
+#map {
+  height: 200px;
+  width: 80%;
+  /* border: solid #fff 2px; */
+  border-radius: 10px;
+}
 
 input,
 textarea {
@@ -110,7 +100,7 @@ textarea {
   position: relative;
   width: 100%;
   overflow: hidden;
-  margin: 20px 0;
+  margin: 20px 0 60px 0;
   border-radius: 5px;
 }
 
@@ -140,7 +130,6 @@ form {
   position: relative;
   width: 70%;
   margin: auto;
- 
 }
 
 .title {
