--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,170 +1,160 @@
+/* Portfolio only */
 
+.portfolio-main-name-bg {
+  height: 40px;
+  width: 100%;
+  background: #ffffff;
+}
 
-/* Portfolio only */ 
+.portfolio-main-name {
+  background-color: rgb(44, 44, 230);
+  width: 115px;
+  padding: 11px 10px 11px 45px;
+  color: #ffffff;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  letter-spacing: 1px;
+  margin-left: -3px;
+  margin-top: 40px;
+  animation: main-name 2s ease-in-out;
+}
 
-.portfolio-main-name-bg
-  {
-      height: 40px;
-      width: 100%;
-      background: #FFFFFF;
+@keyframes main-name {
+  0% {
+    transform: translate(-1000px, 0);
   }
-
-.portfolio-main-name
-  {
-      background-color: rgb(44, 44, 230);
-      width: 115px;
-      padding: 11px 10px 11px 45px;
-      color: #ffffff;
-      font-family: Arial, Helvetica, sans-serif;
-      font-size: 14px;
-      letter-spacing: 1px;
-      margin-left: -3px;
-      margin-top: 40px;
-      animation: main-name 2s ease-in-out;
+  100% {
+    transform: translate(0, 0);
   }
-  
-  @keyframes main-name
-  {
-      0%{
-          transform: translate(-1000px, 0);
-      }
-      100%{
-          transform: translate(0, 0);
-      }
-  }
+}
 
 ul.menu-item,
-ul.gallery-items{
-	margin:0;
-	list-style-type: none;
+ul.gallery-items {
+  margin: 0;
+  list-style-type: none;
 }
 
-
-#filter-list{
-	display: inline-block;
-	margin:30px 0 30px 10px;
+#filter-list {
+  display: inline-block;
+  margin: 30px 0 30px 10px;
 }
-#filter-list li{
-	display: inline-block;
-	font-size: 14px;
-	color: #888888;
-	line-height: 35px;
-	text-align: center;
-	border-radius: 25px;
-	font-weight: 500;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	padding: 0 5px;
-	margin: 2px;
-	min-width: 71px;
-	cursor: pointer;
-	-webkit-transition:all 0.3s ease-in-out;
-	-ms-transition:all 0.3s ease-in-out;
-	-moz-transition:all 0.3s ease-in-out;
-	transition:all 0.3s ease-in-out;
-
+#filter-list li {
+  display: inline-block;
+  font-size: 14px;
+  color: #888888;
+  line-height: 35px;
+  text-align: center;
+  border-radius: 25px;
+  font-weight: 500;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  padding: 0 5px;
+  margin: 2px;
+  min-width: 71px;
+  cursor: pointer;
+  -webkit-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 #filter-list li.active,
-#filter-list li:hover{
-	background-color: #53bff0;
-	color: #fff;
+#filter-list li:hover {
+  background-color: #53bff0;
+  color: #fff;
 }
 
-.gallery-outer{
-	width: 100%;
-	float: left;
-	height: auto;
-	padding: 5px;
-	overflow: hidden;
-	margin: 0 0 10% 0;
+.gallery-outer {
+  width: 100%;
+  float: left;
+  height: auto;
+  padding: 5px;
+  overflow: hidden;
+  margin: 0 0 10% 0;
 }
 
-.gallery-items li{
-	width: 100%;
+.gallery-items li {
+  width: 100%;
 }
 
-.gallery-items li img{
-	width: 80%;
-	height: auto;
-	margin: 20px 0 10px 10%;
-	box-shadow: 1px 1px 10px 3px rgba(0, 0, 0, 0.6);
-	-webkit-transition:all 0.3s ease-in-out;
-	-ms-transition:all 0.3s ease-in-out;
-	-moz-transition:all 0.3s ease-in-out;
-	transition:all 0.3s ease-in-out;
+.gallery-items li img {
+  width: 80%;
+  height: auto;
+  margin: 20px 0 10px 10%;
+  box-shadow: 1px 1px 10px 3px rgba(0, 0, 0, 0.6);
+  -webkit-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
-.gallery-inner{
-	width: 100%;
-	float: left;
-	position: relative;
-	overflow: hidden;
+.gallery-inner {
+  width: 100%;
+  float: left;
+  position: relative;
+  overflow: hidden;
 }
 
-.gallery-overlay{
-	width: 100%;
-	position: absolute;
-	left:0;
-	top: 50%;
-	text-align: center;
-	-webkit-transform:translateY(-50%) scale(0);
-	-ms-transform:translateY(-50%) scale(0);
-	-moz-transform:translateY(-50%) scale(0);
-     transform:translateY(-50%) scale(0);
-     -webkit-transition:all 0.3s ease-in-out;
-	-ms-transition:all 0.3s ease-in-out;
-	-moz-transition:all 0.3s ease-in-out;
-	transition:all 0.3s ease-in-out;
+.gallery-overlay {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  text-align: center;
+  -webkit-transform: translateY(-50%) scale(0);
+  -ms-transform: translateY(-50%) scale(0);
+  -moz-transform: translateY(-50%) scale(0);
+  transform: translateY(-50%) scale(0);
+  -webkit-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
-.gallery-overlay a{
-	width: 60px;
-	line-height: 60px;
-	background:#fff;
-	border-radius: 50%;
-	text-align: center;
-	display: inline-block;
-	color: #53bff0;
-	font-size: 20px;
+.gallery-overlay a {
+  width: 60px;
+  line-height: 60px;
+  background: #fff;
+  border-radius: 50%;
+  text-align: center;
+  display: inline-block;
+  color: #53bff0;
+  font-size: 20px;
 }
 
-.gallery-overlay a:hover{
-	background:#53bff0;
-	color: #fff;
+.gallery-overlay a:hover {
+  background: #53bff0;
+  color: #fff;
 }
 
-.gallery-items li:hover .gallery-overlay{
-	-webkit-transform:translateY(-50%) scale(1);
-	-ms-transform:translateY(-50%) scale(1);
-	-moz-transform:translateY(-50%) scale(1);
-     transform:translateY(-50%) scale(1);
+.gallery-items li:hover .gallery-overlay {
+  -webkit-transform: translateY(-50%) scale(1);
+  -ms-transform: translateY(-50%) scale(1);
+  -moz-transform: translateY(-50%) scale(1);
+  transform: translateY(-50%) scale(1);
 }
 
-.gallery-items li:hover img{
-	-webkit-transform:scale(1.05);
-	-ms-transform:scale(1.05);
-	-moz-transform:scale(1.05);
-	transform:scale(1.05);
+.gallery-items li:hover img {
+  -webkit-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  -moz-transform: scale(1.05);
+  transform: scale(1.05);
 }
 
-.img-description
-{
-	text-align: center;
-	margin: 10px 0 10px 0;
+.img-description {
+  text-align: center;
+  margin: 10px 0 10px 0;
 }
 
-.img-description p
-{
-	font-style: 35px;
-	font-family: Arial, Helvetica, sans-serif;
-	font-weight: 700;
-	color: #006400;
+.img-description p {
+  font-style: 35px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  color: #006400;
 }
 
-.about-hr
-  {
-    margin: 1% auto;
-    height: 4px;
-    width: 8%;
-    border-width: 0;
-    background-color: #DBA221;
-  }
+.about-hr {
+  margin: 1% auto;
+  height: 4px;
+  width: 8%;
+  border-width: 0;
+  background-color: #dba221;
+}
