--- a/css/responsive(960).css
+++ b/css/responsive(960).css
@@ -1,279 +1,257 @@
-@media only screen and (max-width:960px) 
-{
+@media only screen and (max-width: 960px) {
+  body {
+    background: #ffffff;
+  }
 
-    body
-    {
-        background: 	#ffffff;
-    }
+  .main-menu {
+    display: none;
+  }
 
-    .main-menu
-    {
-        display: none;
-    }
+  .sidebar-menu {
+    display: flex;
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+    border-bottom: 2px solid #c7c7c7;
+  }
 
-    .sidebar-menu
-    {
-        display: flex;
-        width: 100%;
-        position: fixed;
-        z-index: 1;
-        border-bottom: 2px solid #C7C7C7;
-    }
+  .responsive-menu {
+    width: 100%;
+    background-color: #f3f3f3;
+    display: block;
+  }
 
-    .responsive-menu
-    {
-        width: 100%;
-        background-color: #F3F3F3;
-        display: block;
-    }
+  .responsive-menu ul {
+    float: right;
+    display: flex;
+    list-style: none;
+    margin-right: 20px;
+  }
 
-    .responsive-menu ul
-    {
-        float: right;
-        display: flex;
-        list-style: none;
-        margin-right: 20px;
-        }
+  .responsive-menu ul li {
+    padding: 18px 15px;
+  }
 
-    .responsive-menu ul li
-    {
-        padding: 18px 15px;
-    }
+  .responsive-menu ul li a {
+    color: #6f7275;
+    display: block;
+    padding: 15px;
+    font-family: Segoe UI;
+    font-size: 16px;
+    font-weight: 500;
+  }
 
-    .responsive-menu ul li a
-    {
-        color: #6F7275;
-        display: block;
-        padding: 15px;
-        font-family: Segoe UI;
-        font-size: 16px;
-        font-weight: 500;
-    }
+  .fa-home,
+  .fa-user,
+  .fa-briefcase,
+  .fa-phone {
+    padding-right: 5px;
+  }
 
-    .fa-home, .fa-user, .fa-briefcase, .fa-phone
-    {
-        padding-right: 5px;
-    }
+  .responsive-menu ul li a:hover {
+    color: rgb(44, 44, 230);
+  }
 
-    .responsive-menu ul li a:hover
-    {
-        color: rgb(44, 44, 230);
-    }
+  .active {
+    color: rgb(44, 44, 230);
+  }
 
-    .active
-    {
-        color: rgb(44, 44, 230);
-    }
-
-    .sidebar-btn
-{
+  .sidebar-btn {
     margin: 25px 0 0 12px;
-}
-    
+  }
 
-    #sidebar
-    {
-        display: none;
-        overflow: hidden auto;
-    }
+  #sidebar {
+    display: none;
+    overflow: hidden auto;
+  }
 
-    .profile1
-    {
-        display: none;
-    }
+  .profile1 {
+    display: none;
+  }
 
-    .sidebar-hide-show {
-        height: 100%;
-        width: 30%;
-    }
+  .sidebar-hide-show {
+    height: 100vh;
+    margin: 0;
+    width: 30%;
+  }
 
-    /*.logo-img
+  /*.logo-img
     {
         height: 60px;
         width: 60px;
     }*/
 
-    .sidebar-content
-    {
-        margin-top: 30px;
-    }
-
-    .about-content
-    {
-        margin-left: 8%;
-    }
-
-    h2.sidebar-about
-    {
-        font-size: 18px;
-    }
-
-    h2.sidebar-about:before
-    {
-        height: 4px;
-    }
-
-    h2.sidebar-about:after
-    {
-        height: 4px;
-    }
-
-    p.sidebar-about-p
-    {
-        font-size: 13px;
-    }
-
-    p.sidebar-content-p
-    {
-        font-size: 13px;
-    }
-
-    h2.sidebar-about-get
-    {
-        font-size: 18px;
-    }
-
-    h2.sidebar-about-get:before
-    {
-        height: 4px;
-    }
-
-    h2.sidebar-about-get:after
-    {
-        height: 4px;
-    }
-
-    .sidebar-social-menu ul
-    {
-        margin: 35px 0 30px 0;
-    }
-
-    .sidebar-social-menu ul li .fa
-    {
-        font-size: 21px;
-    }
-
-    .copyright
-    {
-        margin: 10px auto 20px auto;
-    }
-
-    .cipyright-link
-    {
-        font-size: 13px;
-    }
-
-    div.content
-    {
-        width: 100%;
-        height: 100vh;
-        margin: auto;
-        padding-top: 90px;
-        border: none;
-        overflow: hidden auto;
-        box-shadow: none;
-    }
-
-    div.outer-div
-    {
-        width: 100%;
-        height: 100vh
-    }
-
-    div.inner-1
-    {
-        width: 99.5%;
-        height: 100vh;
-        box-shadow: none;
-    }
-
-    div.inner-2
-    {
-        width: 99.5%;
-        height: 100vh;
-        box-shadow: none;
-    }
-
-    div.inner-3
-    {
-        width: 99.5%;
-        height: 100vh;
-        box-shadow: none;
-    }
-
-    div.inner-div
-    {
-        width: 99.5%;
-        height: 100vh;
-        overflow: hidden;
-        box-shadow: none;
-    }
-
-    div.profile
-    {
-        overflow: auto;
-    }
-
-    .my-profile
-    {
-        height: 300px;
-    }
-
-    .profile-img
-    {
-        height: 90px;
-        width: 86px;
-    }
-
-    .my-name
-    {
-        font-size: 19px;
-    }
-
-    .umy-name
-    {
-        font-size: 13px;
-    }
-
-    .social-menu ul li
-    {
-        margin: 0 22px 0 22px;
-    }
-
-    .social-menu ul li .fa
-    {
-        font-size: 22px;
-    }
-
-    .profile-quote
-    {
-        font-size: 13px;
-    }
-
-    .arrow-right span
-    {
-        width: 50px;
-        margin: 15px 0 30px 0;
-    }
-
-    div.container
-  {
-      width: 50%;
-      height: 100%;
-      box-shadow: -3px 0 40px 10px rgba(0, 0, 0, 0.2);
-      overflow: hidden auto;
-      animation: content-animation 1.5s ease-in-out;
+  .sidebar-content {
+    margin-top: 30px;
   }
 
-  @keyframes content-animation{
-    0%
-    {
-        transform: translate(0, 700px);
+  .about-content {
+    margin-left: 8%;
+  }
+
+  h2.sidebar-about {
+    font-size: 18px;
+  }
+
+  h2.sidebar-about:before {
+    height: 4px;
+  }
+
+  h2.sidebar-about:after {
+    height: 4px;
+  }
+
+  p.sidebar-about-p {
+    font-size: 13px;
+  }
+
+  p.sidebar-content-p {
+    font-size: 13px;
+  }
+
+  h2.sidebar-about-get {
+    font-size: 18px;
+  }
+
+  h2.sidebar-about-get:before {
+    height: 4px;
+  }
+
+  h2.sidebar-about-get:after {
+    height: 4px;
+  }
+
+  .sidebar-social-menu ul {
+    margin: 35px 0 30px 0;
+  }
+
+  .sidebar-social-menu ul li .fa {
+    font-size: 21px;
+  }
+
+  .copyright {
+    margin: 10px auto 20px auto;
+  }
+
+  .cipyright-link {
+    font-size: 13px;
+  }
+
+  div.content {
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    border: none;
+    box-shadow: none;
+  }
+
+  div.inner-div {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    box-shadow: none;
+    margin: 85px 100px 0 0;
+  }
+
+  div.profile {
+    overflow: auto;
+  }
+
+  .my-profile {
+    height: 300px;
+  }
+
+  /* .profile-img {
+    height: 90px;
+    width: 86px;
+  } */
+
+  div.profile-image-cover {
+    height: 90px;
+    width: 86px;
+    margin: -52px 32.5% 0 32.5%;
+    border: white 2px solid;
+    border-radius: 50%;
+    transition: transform 0.5s;
+    overflow: hidden;
+  }
+
+  .profile-img {
+    height: 90px;
+    width: 86px;
+    transition: 0.5s;
+    background: #000;
+    border-radius: 50%;
+  }
+
+  .profile-img:hover {
+    transform: scale(1.2);
+  }
+
+  .my-name {
+    font-size: 19px;
+  }
+
+  .umy-name {
+    font-size: 13px;
+  }
+
+  .social-menu ul li {
+    margin: 0 22px 0 22px;
+  }
+
+  .social-menu ul li .fa {
+    font-size: 22px;
+  }
+
+  .profile-quote {
+    font-size: 13px;
+  }
+
+  .arrow-right span {
+    width: 50px;
+    margin: 15px 0 30px 0;
+  }
+
+  div.container {
+    width: 50%;
+    height: 100%;
+    box-shadow: -3px 0 40px 10px rgba(0, 0, 0, 0.2);
+    overflow: hidden auto;
+    animation: content-animation 1.5s ease-in-out;
+  }
+
+  @keyframes content-animation {
+    0% {
+      transform: translate(0, 700px);
     }
-    100%
-    {
-        transform: translate(0, 0);
+    100% {
+      transform: translate(0, 0);
     }
+  }
 }
 
+/*######------ABOUT------######*/
+
+.fun-fact {
+  margin: 10% 0 10% 0;
+}
+
+/*######------Resume------######*/
+
+.hobby-container {
+  margin: 0 0 30% 0;
+}
+
+/*######------Resume------######*/
+
+.gallery-outer {
+  margin: 0 0 20% 0;
+}
+
+/*######------contact------######*/
+
+.contact-form {
+  margin: 20px 0 110px 0;
 }
